# TwoTriangles

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shader/: shader.frag  shader.vert
shaders/: shader.frag  shader.vert
src/: Input.cpp  Input.h  Logger.cpp  Logger.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  System.cpp  System.h  main.cpp  twotriangles.h
